* Remove compilation * Require project archive * Use in-memory work directory * Fail startup on error